--- a/TODO.txt
+++ b/TODO.txt
@@ -32,7 +32,9 @@ João Paulo de Castro
  
  5o - Estruturar Objetos
 
- 6o - Construir Classe Graph
+ 6o - Construir Classe Graph // DONE(igormseixas) 02/09
+ 
+ 6o - Estruturar Classe Graph
 
 
 
