implemented BFS and changed initialParse file

--- a/TODO.txt
+++ b/TODO.txt
@@ -36,11 +36,9 @@ João Paulo de Castro
  
 | 6o - Estruturar Classe Graph // DONE(igormseixas) 02/09
 
- 7o - Implementar busca em largura 
+| 7o - Implementar busca em largura //DONE(igormseixas) 08/09
 
  8o - Paralelizar 
-
- Obs: Paulo recriei o seu metodo para tentar entender ele, e continuou dando o mesmo problema, acho que ele deveria testar primeiro na lista do dono se a pessoa é amiga dele antes de ir testando todas as primeiras posicoes, fazendo isso para cada vez que ele desce na lista. entao criei outro metodo que testa se esta na lista se nao estiver vai pro nivel de baixo, continuou dando um problema semelhante, entao criei um vetor de 5 posicoes cada uma representando um nivel de like durante a pesquisa, quando encontra a pessoa adiciona 1 para a posicao do array correspondente ao nivel, ao terminar a busca eu encontro a menor posicao que tem 1. é uma gambiarra, porq estou com sono e cansado, mas fiz porq acredito que pode ajudar voce e o igor a pensar em algo que nao seja uma gambiarra que faca a mesma coisa, ou ate mesmo uma funcao recursiva se for o caso. qualquer coisa te respondo quando acordar. abs
 
 
 
