--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@ Trabalho Prático - Arquitetura de Computadores III
 Linguagem - C++
 Igor Machado Seixas
 João Paulo de Castro
+Paulo Junio
 
 
 |1o - fazer o parse de cada evento - DONE(castrob) 30/08
@@ -30,7 +31,7 @@ João Paulo de Castro
 
 | 4o - Passar de Double (DONE)igormseixas/castrob 02/09
  
-| 5o - Estruturar Objetos
+| 5o - Estruturar Objetos //DONE (paulojunio) 07/09
 
 | 6o - Construir Classe Graph // DONE(igormseixas) 02/09
  
@@ -38,7 +39,7 @@ João Paulo de Castro
 
 | 7o - Implementar busca em largura //DONE(igormseixas) 08/09
 
- 8o - Paralelizar 
+| 8o - Paralelizar //DONE(castrob/igormseixas) 08/09
 
 
 
